# rust-sync

./: .env  Cargo.toml  README.md  create_db.sh  cspell.json  docker-compose.yml
src/: main.rs  requests.rs
src/entities/: base_entity_with_id.rs
src/lib/entities/: base_entity.rs
src/requests/: drop.rs  seed.rs  sync.rs
