[package]
name = "rust-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
sqlx = { version = "0.7", features = [ "postgres", "runtime-tokio", "tls-rustls" ] }
tokio = { version = "1.37.0", features = ["full"] }

