[package]
name = "rust-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
chrono = "0.4.37"
env_logger = "0.11.3"
fakeit = "1.2.0"
log = "0.4.21"
nanoid = "0.4.0"
rand = "0.8.5"
serde = "1.0.197"
serde_json = "1.0.115"
sqlx = { version = "0.7", features = [ "postgres", "runtime-tokio", "tls-rustls" ] }
tokio = { version = "1.37.0", features = ["full"] }

